--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "react-hook-form": "^7.47.0",
     "react-hot-toast": "^2.5.2",
     "tailwind-merge": "^2.0.0",
-    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4",
     "zustand": "^4.4.6"
   },
@@ -42,6 +41,7 @@
     "eslint-config-next": "14.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
+    "tw-animate-css": "^1.3.5",
     "typescript": "^5"
   }
 }
