--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "zustand": "^4.4.6"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.11",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
