--- a/package.json
+++ b/package.json
@@ -40,8 +40,11 @@
     "autoprefixer": "^10.4.21",
     "eslint": "^8",
     "eslint-config-next": "14.0.0",
-    "postcss": "^8.5.6",
+    "postcss": "^8.4.31", 
     "tailwindcss": "^4.1.11",
     "typescript": "^5"
+  },
+  "engines": {
+    "node": ">=18.0.0" 
   }
 }
