--- a/package.json
+++ b/package.json
@@ -37,14 +37,15 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/trusted-types": "^2.0.7",
     "autoprefixer": "^10.4.21",
     "eslint": "^8",
     "eslint-config-next": "14.0.0",
-    "postcss": "^8.4.31", 
+    "postcss": "^8.4.31",
     "tailwindcss": "^4.1.11",
     "typescript": "^5"
   },
   "engines": {
-    "node": ">=18.0.0" 
+    "node": ">=18.0.0"
   }
 }
