--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,12 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "next.config.mjs", "types/**/*.ts"],
-  "exclude": ["node_modules"]
+"include": [
+  "next-env.d.ts",
+  "**/*.ts",
+  "**/*.tsx",
+  "next.config.mjs",
+  "types/**/*.ts"
+],
+"exclude": ["node_modules", ".next"]
 }
