--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "types": ["@types/node", "@types/trusted-types"],
+    "types": ["@types/node"],
     "jsx": "preserve",
     "incremental": true,
     "plugins": [
