--- a/.vercelignore
+++ b/.vercelignore
@@ -1,11 +1,41 @@
-# Vercel ignore file to prevent problematic files from being uploaded
+# Dependencies
 node_modules
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Production builds
 .next
-.git
-*.log
+out
+dist
+
+# Environment files
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+
+# IDE and OS files
 .DS_Store
 Thumbs.db
+.vscode
+.idea
+
+# Git
+.git
+.gitignore
+
+# Logs
+*.log
+
+# Cache
+.cache
+.turbo
+
+# Coverage
+coverage
+
+# Temporary files
+tmp
+temp
