--- a/.vercelignore
+++ b/.vercelignore
@@ -1,7 +1,15 @@
 .git
 .gitignore
-node_modules
 npm-debug.log
 yarn-error.log
+pnpm-debug.log
 .env
 .env.local
+.env.development
+.env.production
+.env.test
+node_modules
+.vscode
+.idea
+.DS_Store
+Thumbs.db
