--- a/.vercelignore
+++ b/.vercelignore
@@ -1,15 +1,15 @@
 .git
 .gitignore
-npm-debug.log
-yarn-error.log
-pnpm-debug.log
-.env
-.env.local
-.env.development
-.env.production
-.env.test
 node_modules
 .vscode
 .idea
 .DS_Store
 Thumbs.db
+.env
+.env.local
+.env.development
+.env.production
+.env.test
+.next/cache
+coverage
+dist
